--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,10 +39,10 @@ coverage = "^6.4"
 flake8 = "^5.0.4"
 flake8-annotations = "^2.9.1"
 flake8-bugbear = "^22.8.23"
-flake8-isort = "^4.2.0"
-flake8-tidy-imports = "^4.8.0"
-flake8-pep585 = {version = "^0.1.5", python = ">=3.9"}
 flake8-future-annotations = "^0.0.5"
+flake8-isort = "^4.2.0"
+flake8-pep585 = {version = "^0.1.5", python = ">=3.9"}
+flake8-tidy-imports = "^4.8.0"
 isort = "^5.10.1"
 pep8-naming = "^0.13.2"
 pre-commit = "^2.20.0"
@@ -50,6 +50,7 @@ pyright = "^1.1.268"
 pytest = "^7.1.2"
 pytest-asyncio = "^0.19.0"
 pytest-cov = "^3.0.0"
+Sphinx = "^4.3.0"
 tox = "^3.25.1"
 tox-poetry = "^0.4.1"
 twine = "^4.0.1"
