--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ flake8-future-annotations = "^0.0.5"
 flake8-isort = "^4.2.0"
 flake8-pep585 = {version = "^0.1.5", python = ">=3.9"}
 flake8-tidy-imports = "^4.8.0"
+furo = "^2022.1.2"
 isort = "^5.10.1"
 pep8-naming = "^0.13.2"
 pre-commit = "^2.20.0"
