--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ packages = [
 python = ">=3.7,<4"
 asyncio-dgram = "2.1.2"
 dnspython = "2.2.1"
+furo = { version = "^2022.1.2", optional = true }
+Sphinx = { version = "^4.3.0", optional = true }
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
@@ -43,7 +45,6 @@ flake8-future-annotations = "^0.0.5"
 flake8-isort = "^4.2.0"
 flake8-pep585 = {version = "^0.1.5", python = ">=3.9"}
 flake8-tidy-imports = "^4.8.0"
-furo = "^2022.1.2"
 isort = "^5.10.1"
 pep8-naming = "^0.13.2"
 pre-commit = "^2.20.0"
@@ -51,11 +52,13 @@ pyright = "^1.1.268"
 pytest = "^7.1.2"
 pytest-asyncio = "^0.19.0"
 pytest-cov = "^3.0.0"
-Sphinx = "^4.3.0"
 tox = "^3.25.1"
 tox-poetry = "^0.4.1"
 twine = "^4.0.1"
 typing-extensions = "^4.3.0"
+
+[tool.poetry.extras]
+docs = ["furo", "Sphinx"]
 
 [tool.poetry.scripts]
 mcstatus = 'mcstatus.__main__:main'
